--- a/export_prompt.ipynb
+++ b/export_prompt.ipynb
@@ -21,7 +21,7 @@
     "from python_algo.gemini_api import LLM\n",
     "from python_algo.evaluation import cost_in_out, total_cost, eval_instruction\n",
     "from python_algo.database_management import question_database_manage\n",
-    "from python_algo.semantic_process import Semantic_eval\n",
+    "from python_algo.semantic import Semantic_eval\n",
     "import json\n",
     "\n",
     "import os"
@@ -161,7 +161,7 @@
    "outputs": [],
    "source": [
     "#dict_result_return = {}\n",
-    "save_info_dict = info_dict"
+    "# save_info_dict = info_dict"
    ]
   },
   {
